# svdp

./: .gitignore  Cargo.toml  README.md  ____post-deploy.sh
conf/: major.toml
src/: ecs.rs  lib.rs  main.rs  mongodb.rs  rds.rs
src/dp/: mod.rs
src/ecs/: cpu.rs  load15m.rs  load5m.rs  mem.rs  mod.rs  tcp.rs
src/ecs/disk/: mod.rs  rd.rs  rd_tps.rs  wr.rs  wr_tps.rs
src/ecs/netif/: mod.rs  rd.rs  rd_tps.rs  wr.rs  wr_tps.rs
src/serv/: mod.rs
src/serv/dp/: mod.rs
src/serv/sv/: mod.rs
src/serv/sv_analyse/: mod.rs
src/serv/sv_analyze/: mod.rs
src/slb/: mod.rs
src/sv/: mod.rs
src/sv/aliyun/: mod.rs  mod_include.rs  redis.rs
src/sv/aliyun/ecs/: base.rs  cpu.rs  load15m.rs  load5m.rs  mem.rs  mod.rs  tcp.rs
src/sv/aliyun/ecs/disk/: mod.rs  rd.rs  rd_tps.rs  wr.rs  wr_tps.rs
src/sv/aliyun/ecs/netif/: mod.rs  rd.rs  rd_tps.rs  wr.rs  wr_tps.rs
src/sv/aliyun/memcache/: base.rs  conn.rs  cpu.rs  mem.rs  mod.rs  rd.rs  wr.rs
src/sv/aliyun/mongodb/: base.rs  conn.rs  cpu.rs  disk.rs  disk_tps.rs  mem.rs  mod.rs  rd.rs  wr.rs
src/sv/aliyun/rds/: base.rs  conn.rs  cpu.rs  delay.rs  disk.rs  disk_tps.rs  disktps.rs  mem.rs  mod.rs
src/sv/aliyun/redis/: base.rs  conn.rs  cpu.rs  mem.rs  mod.rs  rd.rs  wr.rs
src/sv/aliyun/serv/: mod.rs
src/sv/aliyun/slb/: base.rs  conn.rs  mod.rs  rd.rs  rd_tps.rs  wr.rs  wr_tps.rs
src/zmacro/: mod.rs
tools/: tcpcli.rs  zstart.sh  zstart_bsd_draft.sh
