[package]
name = "svdp"
version = "0.1.0"
authors = ["test <test@test>"]

[dependencies]
clap = "2.29"

postgres = { version = "0.15", features = ["with-serde_json"] }
r2d2_postgres = "0.14"

reqwest = "0.8"
httparse = "1.2.4"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

threadpool = "1.7"

lazy_static = "1.0.0"
