[package]
name = "svdp"
version = "0.1.0"
authors = ["test <test@test>"]

[dependencies]
toml = "0.4.5"

r2d2 = "0.8.2"
r2d2_postgres = "0.14"
postgres = { version = "0.15", features = ["with-serde_json"] }

iron = "0.6.0"
#reqwest = "0.8"
#httparse = "1.2.4"

regex = "0.2.6"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

threadpool = "1.7"
lazy_static = "1.0.0"
num_cpus = "1.8.0"
time = "0.1.39"
colored = "1.6.0"
